--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "sqlite3": "^5.1.6"
   }
 }
